reflectionemailservice/src/ReflectionEmailService/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: reflectemail
spec:
  selector:
    app: reflectemail-pod
  ports:
  - port: 80
  type: ClusterIP
