reflectionemailservice/src/ReflectionEmailService/manifests/cert.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reflectemail-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts: 
    - cognizantreflectapi.com
    secretName: selfsigned-cert-tls
  rules:
  - host: cognizantreflectapi.com 
    http:
      paths:
      - backend:
          serviceName: reflectemail
          servicePort: 80
        path: /email(/|$)(.*)
