reflectionemailservice/src/ReflectionEmailService/manifests/manifest-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reflectemail-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: reflectemail
          servicePort: 80
        path: /email(/|$)(.*)
